<resources>
    <string name="app_name">ProjetAMIO</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="service_status">Service status:</string>
    <string name="last_results">Last results :</string>
    <string name="last_alert">Last Alert :</string>
    <string name="interogation_point">\?\?\?</string>
    <string name="inconnu">Inconnu</string>
    <string name="off">Arrêté</string>
    <string name="title_activity_settings">Settings</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>