<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/TV2"
        android:layout_width="186dp"
        android:layout_height="120dp"
        android:layout_marginBottom="108dp"
        android:text="@string/off"
        app:layout_constraintBottom_toTopOf="@+id/TV4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TV1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/TV1"
        android:layout_width="186dp"
        android:layout_height="120dp"
        android:layout_marginBottom="92dp"
        android:text="@string/last_results"
        app:layout_constraintBottom_toTopOf="@+id/TV3"
        app:layout_constraintEnd_toStartOf="@+id/TV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <TextView
        android:id="@+id/TV6"
        android:layout_width="186dp"
        android:layout_height="120dp"
        android:layout_marginBottom="96dp"
        android:text="@string/inconnu"
        app:layout_constraintBottom_toTopOf="@+id/buttonOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TV5" />

    <TextView
        android:id="@+id/TV3"
        android:layout_width="186dp"
        android:layout_height="120dp"
        android:layout_marginBottom="96dp"
        android:text="@string/service_status"
        app:layout_constraintBottom_toTopOf="@+id/TV5"
        app:layout_constraintEnd_toStartOf="@+id/TV4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TV5"
        android:layout_width="186dp"
        android:layout_height="120dp"
        android:layout_marginBottom="96dp"
        android:text="@string/last_alert"
        app:layout_constraintBottom_toTopOf="@+id/toggle"
        app:layout_constraintEnd_toStartOf="@+id/TV6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TV4"
        android:layout_width="186dp"
        android:layout_height="120dp"
        android:layout_marginBottom="96dp"
        android:text="@string/inconnu"
        app:layout_constraintBottom_toTopOf="@+id/TV6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TV3" />

    <Button
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="On/Off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonOff"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="16dp"
        android:text="Useless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/toggle" />
</androidx.constraintlayout.widget.ConstraintLayout>